# site-web-gestio

./: .gitignore  404.html  AGENTS.md  CNAME  LICENSE  README.md  index.html  robots.txt  sitemap.xml
mobile/: sw.js  (+5 more)
mobile/backend/: main_backend.py  pyproject.toml  pytest.ini  requirements.txt
mobile/backend/api/: __init__.py  attachments.py  budgets.py  objectifs.py  recurrences.py  setup.py  transactions.py
mobile/backend/config/: README.md  __init__.py  logging_config.py  paths.py
mobile/backend/domains/budgets/: __init__.py  budget_service.py  model_budget.py  repository_budget.py
mobile/backend/domains/home/: README.md  __init__.py
mobile/backend/domains/objectifs/: __init__.py  model_objectif.py  objectifs_service.py  repository_objectif.py
mobile/backend/domains/ocr/: LOGIC_FLOW.md  __init__.py
mobile/backend/domains/ocr/api/: __init__.py  ocr.py
mobile/backend/domains/transactions/: GLOSSARY.md  LOGIC_FLOW.md  README.md
mobile/backend/shared/: README.md  exceptions.py
mobile/backend/shared/database/: __init__.py  db_normalize.py  settings_repository.py
mobile/backend/shared/services/: README.md  security.py
mobile/backend/shared/utils/: __init__.py  amount_parser.py  converters.py  dataframe_utils.py
mobile/backend/tests/: QUICKSTART_TESTS.md  TEST_MODE.md  conftest.py
mobile/backend/tests/test_ocr/: __init__.py  test_cache_service.py  test_ocr_api.py  test_ocr_service.py  test_pdf_parser.py  test_regex_parser.py
mobile/backend/tests/test_shared/: test_amount_parser.py
mobile/backend/tests/test_transactions/: test_repository.py
(+173 files in other folders)
