[project]
name = "gestion-financiere"
version = "4.0.0"
description = "Application de gestion financiere personnelle - Version Mobile (Pyodide)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "pydantic<2.0",
    "requests>=2.0",
    "python-dateutil>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "groq>=1.0.0",
    "pdfminer.six",
]

[project.optional-dependencies]
dev = []
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=9.0.2",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["domains*", "shared*", "config*", "resources*", "api*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.css", "*.png", "*.ico"]
main_backend = ["*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
